Changes to fig2dev
===============================================================================
Version 3.2
===============================================================================
Patchlevel 8 (Dec 2020)

NEW FEATURES:
	o Use deflate to embed image data into eps output, often substantially
	  reducing file size.
	o Embed pdf files into ps output by converting the pdf to eps.
	o Allow negative arrow widths. This might be useful for asymmetric arrow
	  tips, which can thus be mirrored around the corresponding line.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	o Reject negative text font sizes. Fixes ticket #86.
	o Allow fig files ending without previous eol character. Fixes #83, #84.
	o Accept text and ellipse angles only within -2*pi to 2*pi. Fixes #76.
	o Allow -1 as default TeX font, not only 0. Fixes #71, #75, #81.
	o Do not allow ASCII NUL anywhere in input. Fixes #65, #68, #73, #80.
	o Use getline() to improve input scanning.
	  Fixes tickets #58, #59, #61, #62, #67, #78, #79, #82.
	o Correctly scan embedded pdfs for /MediaBox value.
	o Convert polygons having too few points to polylines. Ticket #56.
	o Reject huge arrow types causing integer overflow. Ticket #57.
	o Allow Fig v2 text strings ending with multiple ^A. Ticket #55.
	o Embed images in pdfs with their original compression type, i.e., leave
	  the gs switch "-dAutoFilterColorImages" at its default value "true".

-------------------------------------
Patchlevel 7b (Nov 2019)

NEW FEATURES:
	o A X color database is not needed, but can be provided. The location of
	  the database can be given at compile time, default /etc/X11/rgb.txt.

BUGS FIXED:
	Ticket numbers refer to https://sourceforge.net/p/mcj/tickets/#.
	Debian bug numbers refer to https://bugs.debian.org/#.
	o Do not clip objects with line-thickness 0 having arrows. Ticket #53.
	o Do not segfault on circle/half circle arrowheads with a magnification