@@ -337,6 +337,17 @@ EOF
 ])
 AT_CLEANUP
 
+AT_SETUP([accept closed splines with three points])
+AT_KEYWORDS([read.c])
+AT_CHECK([fig2dev -L box <<EOF
+FIG_FILE_TOP
+3 1 0 1 0 0 50 0 0 0. 0 0 0 3
+0 0 600 0 0 600
+1.0 1.0 1.0
+EOF
+], 0, ignore)
+AT_CLEANUP
+
 AT_SETUP([set invalid color number to default, ticket #30])
 AT_KEYWORDS([read.c])
 AT_CHECK([fig2dev -L pict2e <<EOF
