@@ -228,9 +228,11 @@ compute_closed_spline(F_spline *spline, float precision)
 
   if (!(spline->points /* p0 */ && spline->controls /* s0 */ &&
 	spline->points->next /* p1 */ && spline->controls->next /* s1 */ &&
-	spline->points->next->next && spline->controls->next->next/* p2, s2 */&&
-	spline->points->next->next->next && spline->controls->next->next->next))
+	spline->points->next->next && spline->controls->next->next/* p2, s2 */)
+		  ) {
+      fprintf(stderr, "A closed spline with less than three points.");
       return NULL;
+  }
   INIT_CONTROL_POINTS(spline, p0, s0, p1, s1, p2, s2, p3, s3);
   COPY_CONTROL_POINT(first, s_first, p0, s0);
 
